# homelens-sg

./: .env.example  .gitignore  Proposal.tex  README.md  get_onemap_token.py  pyproject.toml
artifacts/manifests/: candidate_accessibility.json  candidate_knowledge_base.json  chart_map.json  contributed_propertyguru_sale_pages_0301_0400.json  contributed_propertyguru_sale_pages_0400_0500.json  google_maps_subzone_reviews.json  hdb_snapshot.json  official_layers.json  product_data.json  propertyguru_sale_pages_0301_0500_merge.json
artifacts/metrics/: data_quality.json  eda_summary.json  price_model.json
config/: default.json
docs/: ARCHITECTURE.md  DATA_SOURCES.md  METHODOLOGY.md  PROJECT_PROPOSAL.md
map/: ARCHITECTURE.md  index.html  osm_atm.json  osm_bank.json  osm_cafe.json  osm_clinic.json  osm_community_centre.json  osm_convenience.json  osm_kindergarten.json  osm_mall.json  osm_post_office.json  osm_railway_station.json  osm_restaurant.json  osm_supermarket.json  package-lock.json  package.json  vite.config.ts
map-new/: index.html  package.json  vite.config.ts
map-new/src/: App.css  App.tsx  (+1 more)
scripts/: build_dataset.py  build_product_data.py  download_layers.py  enrich_existing_candidates.py  enrich_geospatial.py  explore_data.py  run_demo.py  serve.py  train_model.py
tests/: test_advisor.py  test_data_clients.py  test_features.py  test_geospatial.py  test_integrate_sale_fragments.py  test_intent.py  test_locations.py  test_price_model.py  test_product_data.py  test_recommender.py  test_schemas.py  test_scrape_live_sale_listings.py  test_service_web.py
(+147 files in other folders)
