[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homelens-sg"
version = "0.1.0"
description = "An explainable, data-grounded HDB resale recommendation system for Singapore."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12",
  "html5lib>=1.1",
  "joblib>=1.3",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
homelens = "homelens.cli:main"
homelens-web = "homelens.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
homelens = ["static/*.html", "static/*.css", "static/*.js"]

[tool.ruff]
line-length = 100
target-version = "py310"
